# pants-demo

./: .gitignore  .isort.cfg  BUILD  constraints.txt  generate_constraints.sh  pants.toml  pyproject.toml
pants_demo/data/: __init__.py  config.py  container.py  database.py  database_test.py
pants_demo/lambdas/demo_lambda/: BUILD  container.py  event_handler.py  lambda_handler.py
